unpackaged/main/default/objects/Devis_Parc__c/Devis_Parc__c.object-meta.xml
<CustomObject>
    <label>Devis Parc</label>
    <nameField>
        <displayFormat>DP-{0000}</displayFormat>
        <label>Num Devis Parc</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Devis parcs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>