unpackaged/main/default/objects/Devis_Parc__c/fields/Date_1ere_MEC__c.field-meta.xml
<CustomField>
    <fullName>Date_1ere_MEC__c</fullName>
    <formula>Parc__r.Date_IMMAT__c</formula>
    <label>Date 1ère MEC</label>
    <type>Date</type>
</CustomField>