unpackaged/main/default/objects/Devis_Parc__c/fields/Devis__c.field-meta.xml
<CustomField>
    <fullName>Devis__c</fullName>
    <label>Devis</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Le devis doit être de type parc</errorMessage>
        <filterItems>
            <field>Quote.RecordTypeId</field>
            <operation>equals</operation>
            <value>Quote LD - Parc, Quote LD - Parc - Lecture Seule, Quote LD - Parc - Draft</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Quote</referenceTo>
    <relationshipLabel>Parcs</relationshipLabel>
    <relationshipName>Devis_parcs</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>