unpackaged/main/default/objects/Devis_Parc__c/fields/Marque__c.field-meta.xml
<CustomField>
    <fullName>Marque__c</fullName>
    <formula>text( Parc__r.Marque__c )</formula>
    <label>Marque</label>
    <type>Text</type>
</CustomField>