unpackaged/main/default/objects/Devis_Parc__c/fields/Modele__c.field-meta.xml
<CustomField>
    <fullName>Modele__c</fullName>
    <formula>text( Parc__r.Modele__c )</formula>
    <label>Modèle</label>
    <type>Text</type>
</CustomField>