unpackaged/main/default/objects/Devis_Parc__c/fields/Numero_de_parc__c.field-meta.xml
<CustomField>
    <fullName>Numero_de_parc__c</fullName>
    <formula>Parc__r.Name</formula>
    <label>Numéro de parc</label>
    <type>Text</type>
</CustomField>