unpackaged/main/default/objects/Devis_Parc__c/validationRules/VR_Bloquer_modification_no_parc_pressent.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_Bloquer_modification_no_parc_pressent</fullName>
    <active>true</active>
    <description>Bloquer la modification du numéro de parc pressenti lorsque le devis a été envoyé en tarification.</description>
    <errorConditionFormula>AND(
ISPICKVAL(  Devis__r.Status  , &#39;A Tarifer&#39;),
ISCHANGED( Parc__c ) 

)</errorConditionFormula>
    <errorMessage>Vous ne pouvez pas modifier le numéro de parc pressenti lorsque le devis a été envoyé en tarification.</errorMessage>
</ValidationRule>