unpackaged/main/default/objects/Devis_Parc__c/listViews/Devis_Flash_info_en_cours.listView-meta.xml
<ListView>
    <fullName>Devis_Flash_info_en_cours</fullName>
    <booleanFilter>2 AND (1 or 3)</booleanFilter>
    <columns>NAME</columns>
    <columns>Parc__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Parc__c</field>
        <operation>contains</operation>
        <value>78847,96289,88102,80755,94908,70737,80745,77531,77532,83140,88117,88118,88119,88120,88122,83471,74775,76878,85162,85166,85168,85857,88270,90319,91363,91414,91415,91416,91417,91418,91419,96540,77684,72106,94611,96290,89594,91395,85171</value>
    </filters>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>LAST_90_DAYS</value>
    </filters>
    <filters>
        <field>Parc__c</field>
        <operation>contains</operation>
        <value>95226,95472,95473,95474,96537</value>
    </filters>
    <label>Devis Flash info en cours</label>
    <sharedTo>
        <role>OperationnelPaysPIESEspagne</role>
    </sharedTo>
</ListView>